--- a/.github/workflows/main_andes-functions.yml
+++ b/.github/workflows/main_andes-functions.yml
@@ -37,8 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install azure-functions
-          pip install pymysql
+          pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
